--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'kismetla';
-    src: url('/Assets/Light\ Stories.ttf');
+    src: url('/Assets/lightStories.ttf');
 }
 
 body {
