--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'kismetla';
-    src: url('/Assets/lightStories.ttf');
+    src: url('/Assets/lightstories-webfont.woff');
 }
 
 body {
