--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 @font-face {
     font-family: 'kismetla';
-    src: url('/Assets/lightstories-webfont.woff');
+    src: url('/Assets/lightstories-webfont.woff2') format('woff2');
+    font-display: swap;
 }
 
 body {
