--- a/style.css
+++ b/style.css
@@ -628,7 +628,7 @@ input.w-button {
         width: 100%;
         height: 100vh;
         background-color: #f9a56d;
-        position: absolute;
+        position: fixed;
         z-index: 2;
         transition: 0.3s;
     }
