--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
     align-items: center;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 3;
 }
 
 nav {
@@ -451,7 +451,7 @@ DESKTOP = ABOUT
     height: 580px;
     width: inherit;
     font-family: monospace;
-    font-size:54px;
+    font-size: 54px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -499,12 +499,350 @@ DESKTOP = COOKBOOK
 */
 
 #cookbook section {
-    height: 2000px;
+    height: 2300px;
     width: 100%;
-    text-align: center;
     background-color: #fad78a;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#cookbook section .cookbook {
+    width: 1300px;
+    height: 2220px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
+
+#cookbook section .cookbook .cookbook-header {
+    width: inherit;
+    height: 620px;
+    display: flex;
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover {
+    width: inherit;
+    height: 90%;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover div {
+    width: auto;
+    position: relative;
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover img {
+    width: 100%;
+    position: absolute;
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover .left img:first-child {
+    top: 20%;
+    left: 0;
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover .left img:last-child {
+    width: 60%;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    animation: rotate 30s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover .center {
+    width: 455px;
+    background: url(./Assets/cookbookHero\ \(1\).png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover .right img {
+    top: 40%;
+    left: 0;
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover .right div {
+    text-align: left;
+    position: absolute;
+    bottom: 10%;
+}
+
+#cookbook section .cookbook .cookbook-header .cookbook-cover .right div a {
+    color: #000;
+    font-size: 40px;
+    font-weight: 700;
+    font-family: monospace;
+    line-height: 50px;
+    display: block;
+}
+
+#cookbook section .cookbook .cookbook-text {
+    width: 1160px;
+    height: 720px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#cookbook section .cookbook .cookbook-text .img {
+    width: 30%;
+    background: url(./Assets/cookbook-article.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#cookbook section .cookbook .cookbook-text article {
+    width: 65%;
+}
+
+#cookbook section .cookbook .cookbook-text article p {
+    font-family: "Arimo", sans-serif;
+    width: 720px;
+    font-size: 32px;
+    line-height: 150%;
+    color: #333;
+}
+
+#cookbook section .cookbook .grid-section {
+    width: 1160px;
+    height: 482px;
+    position: relative;
+}
+
+#cookbook section .cookbook .grid-section .grid-text {
+    width: 482px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    transform: translate(0%, 50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#cookbook section .cookbook .grid-section .grid-text h3 {
+    font-family: "Arimo", sans-serif;
+    font-size: 40px;
+    color: #333;
+    font-weight: 700;
+}
+
+#cookbook section .cookbook .grid-section .grid-text:first-child {
+    transform: translate(0%, -50%) rotate(-90deg);
+    left: -18%;
+}
+
+#cookbook section .cookbook .grid-section .grid-text:last-child {
+    transform: translate(0%, -50%) rotate(90deg);
+    right: -18%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid {
+    width: 980px;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+    grid-row-gap: 16px;
+    grid-column-gap: 16px;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image {
+    width: 150px;
+    height: 150px;
+    position: relative;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:hover {
+    cursor: pointer;
+
+    .transparency {
+        display: block;
+    }
+}
+
+.transparency {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.3);
+    display: none;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(1) {
+    background: url(./Assets/grid-1.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(2) {
+    background: url(./Assets/grid-2.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(3) {
+    background: url(./Assets/gird-3.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(4) {
+    background: url(./Assets/grid-4.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(5) {
+    background: url(./Assets/grid-5.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(6) {
+    background: url(./Assets/grid-6.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(7) {
+    background: url(./Assets/grid-7.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(8) {
+    background: url(./Assets/grid-8.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(9) {
+    background: url(./Assets/grid-9.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(10) {
+    background: url(./Assets/grid-10.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(11) {
+    background: url(./Assets/grid-11.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(12) {
+    background: url(./Assets/grid-12.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(13) {
+    background: url(./Assets/grid-13.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(14) {
+    background: url(./Assets/grid-14.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(15) {
+    background: url(./Assets/grid-15.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(16) {
+    background: url(./Assets/grid-16.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(17) {
+    background: url(./Assets/grid-17.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .grid-section .main-grid .grid-image:nth-child(18) {
+    background: url(./Assets/grid-18.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+#cookbook section .cookbook .copywright {
+    width: 100%;
+    height: 30px;
+    margin-top: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#cookbook section .cookbook .copywright p {
+    font-family: monospace;
+    font-size: 20px;
+}
+
+.order-btn {
+    width: 480px;
+    height: 150px;
+    border-radius: 50%;
+    background: url(./Assets/order-btn.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-top: 35px;
+}
+
+.order-btn:hover {
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -777,8 +1115,12 @@ DESKTOP = COOKBOOK
         transform: translateY(-10px) rotate(-45deg);
     }
 
+    /* 
+    MOBILE = ABOUT
+    */
+
     #about section {
-        height: 1200px;
+        height: 1100px;
     }
 
     #about section .about {
@@ -827,4 +1169,138 @@ DESKTOP = COOKBOOK
     #about section .about .click-here {
         font-size: 22px;
     }
+
+    /* 
+    MOBILE = COOKBOOK
+    */
+
+    #cookbook section {
+        height: fit-content;
+    }
+
+    #cookbook section .cookbook {
+        width: 100%;
+        height: 3650px;
+        padding: 0 15px;
+    }
+
+    #cookbook section .cookbook .cookbook-header {
+        height: fit-content;
+    }
+
+    #cookbook section .cookbook .cookbook-header .cookbook-cover {
+        height: 1020px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    #cookbook section .cookbook .cookbook-header .cookbook-cover div {
+        width: 100% !important;
+        height: 250px;
+    }
+
+    #cookbook section .cookbook .cookbook-header .cookbook-cover .left img:last-child {
+        width: 40%;
+        top: 200%;
+        left: 0%;
+    }
+
+    #cookbook section .cookbook .cookbook-header .cookbook-cover .center {
+        height: 310px;
+        background-size: contain;
+        background-position: center;
+    }
+
+    #cookbook section .cookbook .cookbook-header .cookbook-cover .right img {
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        width: 80%;
+    }
+
+    #cookbook section .cookbook .cookbook-header .cookbook-cover .right div {
+        height: fit-content;
+        text-align: center;
+        left: 50%;
+        transform: translate(-50%, 10%);
+    }
+
+    #cookbook section .cookbook .cookbook-text {
+        width: 100%;
+        height: 1600px;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    #cookbook section .cookbook .cookbook-text .img {
+        width: 100%;
+        height: 480px;
+    }
+
+    #cookbook section .cookbook .cookbook-text article {
+        width: 100%;
+    }
+
+    #cookbook section .cookbook .cookbook-text article p {
+        width: 100%;
+        font-size: 28px;
+        margin-bottom: 50px;
+    }
+
+    #cookbook section .cookbook .grid-section {
+        width: 100%;
+        height: 700px;
+    }
+
+    #cookbook section .cookbook .grid-section .main-grid {
+        width: 100%;
+        height: 560px;
+        grid-template-rows: auto auto auto auto auto auto;
+        grid-template-columns: 1fr 1fr 1fr;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    #cookbook section .cookbook .grid-section .main-grid .grid-image {
+        width: 100px;
+        height: 80px;
+    }
+
+    #cookbook section .cookbook .grid-section .grid-text {
+        width: 100%;
+        top: initial;
+    }
+
+    #cookbook section .cookbook .grid-section .grid-text:first-child {
+        left: 50%;
+        transform: translate(-50%, 0%) rotate(0);
+    }
+
+    #cookbook section .cookbook .grid-section .grid-text:last-child {
+        transform: translate(-50%, 0%) rotate(0);
+        right: initial;
+        left: 50%;
+        bottom: 0%;
+    }
+
+    #cookbook section .cookbook .grid-section .grid-text h3 {
+        font-size: 28px;
+    }
+
+    #cookbook section .cookbook .copywright {
+        height: 40px;
+        margin-top: 20px;
+    }
+
+    #cookbook section .cookbook .copywright p {
+        font-size: 16px;
+        font-weight: 300;
+    }
+
+    .order-btn {
+        width: 100%;
+        height: 105px;
+    }
+
 }
